--- a/package.json
+++ b/package.json
@@ -1,25 +1,17 @@
 {
-  "name": "videojs-hls.js",
-  "author": {
-    "name": "StreamRoot",
-    "email": "contact@streamroot.io"
+  "name": "fubo-videojs-hls.js",
+  "author": "StreamRoot <contact@streamroot.io>",
+  "contributors": {
+    "name": "Roman Kurbatov",
+    "email": "roman.kurbatov@vakoms.com"
   },
-  "version": "0.0.1",
-  "main": "./lib/videojs.hls.js",
+  "version": "0.5.0",
+  "main": "./lib/vjs-hls.js",
   "scripts": {},
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
-  },
   "dependencies": {
-    "hls.js": "https://github.com/dailymotion/hls.js.git#v0.4.7",
-    "babelify": "^6.1.3"
+    "hls.js": "https://github.com/dailymotion/hls.js.git#v0.5.7"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-browserify": "4.0.1",
-    "matchdep": "0.3.0",
-    "video.js": "^5.5.3"
+    "video.js": "^5.7.1"
   }
 }
