--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
       "email": "roman.kurbatov@vakoms.com"
     }
   ],
-  "version": "0.6.2",
-  "main": "./lib/vjs-hls.js",
+  "version": "0.6.3",
+  "main": "lib/vjs-hls.js",
   "scripts": {},
   "dependencies": {
     "hls.js": "https://github.com/dailymotion/hls.js.git#v0.6.0"
